# aer_parser

./: .gitignore  18 May 2022.csv  CODE_ARCHITECTURE.md  Cargo.toml  DeltaOps.md  OPTIMIZATION_PLAN.md  README.md  ST1_Cancelled_20 May 2022.csv  ST1_Licences_10 June 2022.csv  ST1_Licences_19 May 2022.csv  ST1_Licences_20 May 2022.csv  WELLS0518.TXT  clinerules.md  delta_load_log.json  gemini.md  gemini_rules.md  licences.csv  pixi.toml  pyproject.toml  read_delta_st1.sql  read_delta_st1_csv.sql  st1_csv_delta_comparison.sql  st49_csv_delta_comparison.sql
.clinerules/: clinerules.md
CSV/: WELLS0404.csv  WELLS0519.csv  WELLS0520.csv  WELLS0610.csv
TXT/: WELLS0404.TXT  WELLS0519.TXT  WELLS0520.TXT  WELLS0521.TXT  WELLS0610.TXT  WELLS0829.TXT
automation/: README.md  aer_parser_daily.service  aer_parser_daily.timer  run_daily_aer_parser.sh
data/csv/: 20250720_SPUD.csv  20250721_SPUD.csv  20250721_WELLS.csv
data/txt/: SPUD07202025.txt  SPUD07212025.TXT  WELLS07202025.TXT  WELLS07212025.TXT
queries/: read_delta_st1.sql  read_delta_st1_csv.sql  read_delta_st49.sql  read_delta_st49_csv.sql  read_st1_csv.sql  read_st49_csv.sql  st1_csv_delta_comparison.sql  st49_csv_delta_comparison.sql
samples/: Parser-ST49.ipynb
src/: delta.rs  downloader.rs  error.rs  lib.rs  main.rs  st1.rs  st49.rs  utils.rs
src/parsers/: common.rs  error.rs  mod.rs  traits.rs
tests/: integration_tests.rs  simple_unit_tests.rs  unit_tests.rs
tests/fixtures/: mod.rs
tests/test_data/: spud0101_expected.csv  wells0102_expected.csv
