[package]
name = "aer_st1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aer_parser"
path = "src/main.rs"

[lib]
name = "aer_st1"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
once_cell = "1.18"