[package]
name = "aer_st1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aer_parser"
path = "src/main.rs"

[lib]
name = "aer_st1"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
deltalake = { version = "0.27.0", features = ["datafusion"] }
datafusion = "48.0.1"
delta_kernel = "0.13.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
zip = "0.6.6"
tempfile = "3.20.0"

[dev-dependencies]
once_cell = "1.18"
